magda-web-client/src/Components/Header/Header.scss
@import "../../variables";

.au-header {
    padding: 16px 0 8px 0;
    padding: 1rem 0 0.5rem 0;

    @media screen and (min-width: $medium) {
        opacity: 0.9;
    }

    .au-header__brand {
        display: block;
        height: 78px;
        min-width: 280px;
        overflow: hidden;
        padding: 0;
        margin: 0;

        .au-header__logo {
            display: inline-block;
            line-height: 78px;
            vertical-align: middle;
            max-width: 367px;
            max-height: 70px;
        }
    }
}

.header {
    border-bottom: 8px solid #341039;
    border-bottom: 0.5rem solid #341039;
}

.header-nav {
    line-height: 79px;
}

#menu-toggle {
    padding: 8px 0;
    padding: 0.5rem 0;
    text-align: left;

    &:before {
        background-image: AU-svguri(
            '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
                '<path d="M0 0h24v24H0z" fill="none"/>' +
                '<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>' +
                "</svg>"
        );
    }
    &.au-accordion--open {
        &:before {
            background-image: AU-svguri(
                '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
                    '<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>' +
                    '<path d="M0 0h24v24H0z" fill="none"/>' + "</svg>"
            );
        }

        &:hover:before {
            background-image: AU-svguri(
                '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
                    '<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>' +
                    '<path d="M0 0h24v24H0z" fill="none"/>' + "</svg>"
            );
        }
    }
    @media screen and (min-width: $medium) {
        display: none;
    }
}

.header__badge {
    padding: 2px 8px;
    padding: 2px 0.5rem;
    margin-left: 8px;
    margin-left: 0.5rem;
    border: solid 2px;
    border-radius: 2em;
    font-size: 12px;
    font-size: 0.75rem;
    font-weight: normal;
    vertical-align: super;
}

.icon {
    &:before {
        width: 1.25em;
        height: 1.25em;
        display: inline-block;
        vertical-align: middle;
        position: relative;
        content: " ";
        background-repeat: no-repeat;
        margin-top: -2px;

        @include AU-space(margin-right, 0.5unit);
    }
}

.navigation {
    a {
        font-size: 16px;
        font-size: 1rem;
        line-height: 1.5;
        padding: 8px 0;
        padding: 0.5rem 0;
        display: block;
        text-decoration: none;

        @media screen and (min-width: $medium) {
            padding: 16px 16px;
            padding: 1rem 0.78rem;
        }
    }
    .au-link-list {
        display: block;
        padding: 0;
        line-height: 5rem;

        @media screen and (min-width: $medium) {
            float: left;
            margin-bottom: -8px;
            margin-bottom: -0.5rem;
        }

        > li {
            display: block;
            margin: 0;

            @media screen and (min-width: $medium) {
                display: inline-block;
                border-top: 0;
            }

            a:hover,
            a:focus {
                background-color: #341039;
                color: #fff;
            }
        }
    }
}

.menu.au-accordion__body {
    @media screen and (min-width: $medium) {
        border-bottom: 0;
        float: right;
    }

    &.au-accordion--closed {
        @media screen and (max-width: $medium) {
            display: none;
        }
    }
}

.mobile-nav {
    background: white;
    position: absolute;
    right: 0;
    width: 100%;
    z-index: 1;
    overflow-y: hidden;
    li {
        padding: 0;
        margin: 0;
        border-bottom: 1px solid #dad9db;
        a {
            line-height: 4.5rem;
            margin: 0;
            border-left: 10px solid transparent;
            display: block;
            padding: 0;
            padding-left: 16px;
            color: $AU-colordark-background;

            &,
            &:hover,
            &:focus {
                text-decoration: none;
            }

            &.active {
                background: #f4f3f5;
                font-weight: bold;
                border-color: $AU-colordark-background;
            }
            span {
                border-bottom: 1px solid $AU-color-foreground-action;
            }
        }
    }
}

